add message service, update transport layer, add swagger docs
